--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="bg-gray-800 text-white py-8">
-    <div class="text-center mb-4">
+    <div id="contact" class="text-center mb-4">
         <input class="p-2 rounded" placeholder="YOUR EMAIL" type="email" />
         <button class="bg-blue-500 text-white px-4 py-2 rounded">
             Subscribe
