--- a/views/admin/product folder/edit_product.ejs
+++ b/views/admin/product folder/edit_product.ejs
@@ -62,7 +62,7 @@
                                         <div class="row">
                                             <div id="previewImage<%= index %>" class="card-body align-items-center" style="margin-bottom: 20px;">
                                                 <img src="/uploads/product-images/<%= image %>" alt="" id="imgView<%= index %>">
-                                                <input class="form-control" type="file" name="images" id="input<%= index %>"
+                                                <input class="form-control" type="file" name="images" id="input<%= index %>" 
                                                     accept="image/png, image/jpeg, image/jpg"
                                                     onchange="viewImage(event,'<%= index %>')">
                                             </div>
@@ -180,12 +180,12 @@
                             <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
                                 <h3 class="text-lg font-semibold text-gray-700">Status</h3>
                                 <div class="mt-4">
-                                    <label for="status" class="block text-gray-600">Product Status</label>
-                                    <select name="status" class="w-full mt-2 p-2 border rounded-md">
-                                        <% statuses.forEach(status=> { %>
-                                            <option value="<%= status %>" <%=status===productDetails.status ? 'selected'
+                                    <label for="isAvailable" class="block text-gray-600">Product Status</label>
+                                    <select name="isAvailable" class="w-full mt-2 p-2 border rounded-md">
+                                        <% isAvailable.forEach(isAvail=> { %>
+                                            <option value="<%= isAvail %>" <%=isAvail===productDetails.isAvail ? 'selected'
                                                 : '' %>>
-                                                <%= status %>
+                                                <%= isAvail %>
                                             </option>
                                             <% }) %>
                                     </select>
