Image editing is done but there is some issue when adding more than one image while editing, the multer is showing exeeded size error. And the div containing the added images is showing even when no image is there. Also there is some issue while removing these images from this addedImagesContainer, the remove button is oversized and it is removing the product succesfully but the problem is it is removing all the images and coming back if I added one more image. 'Validation not done for products and categories'

--- a/views/admin/product folder/add_product.ejs
+++ b/views/admin/product folder/add_product.ejs
@@ -286,10 +286,10 @@
    }
 
         const selectedImages=[];
-        dcument.getElementById('input1').addEventListener('change',handleFileSelect);
+        document.getElementById('input1').addEventListener('change',handleFileSelect);
 
         function handleFileSelect(event){
-            const addedImagesContainer=dcument.getElementById('addedImagesContainer');
+            const addedImagesContainer=document.getElementById('addedImagesContainer');
             addedImagesContainer.innerHTML=''
             const files=event.target.files;
             for (let i=0;i<files.length;i++){
