profile works completed except the editing. Also address works are also done. Cart work is done.

--- a/public/css/user/Nav.css
+++ b/public/css/user/Nav.css
@@ -1,3 +1,6 @@
+body {
+    font-family: 'Playfair Display', serif;
+}
 .navbar {
     background-image: url('/images/user/navbar Image.png');
     padding: 0;
