--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -7,14 +7,15 @@
             <button class="bg-white text-pink-500 px-3 py-1 rounded-full"><i class="fas fa-search"></i></button>
         </div>
         <div class="flex space-x-4">
-            <% if (!session || typeof session==='undefined' ){ %>
+            <% if (!session || typeof session==='undefined' || session === 'Guest' ){ %>
                 <a class="hover:underline" href="/user/login"><button class="glass_btn text-white-500 px-2 py-1 rounded-full">Sign Up</button></a>
                 <a class="hover:underline" href="/user/login"><button class="glass_btn text-white-500 px-2 py-1 rounded-full">Sign In</button></a>
             <% } else{ %>
                 <div class="text-white space-x-2">
+                    <a href="/user/cart"><i class="fas fa-question-circle"></i></a>
                     <a href="/user/wishlist"><i class="fas fa-heart"></i></a>
                     <a href="/user/cart"><i class="fas fa-shopping-cart"></i></a>
-                    <a href="/user/dashboard"><i class="fas fa-user"></i></a>
+                    <a href="/user/profile"><i class="fas fa-user"></i></a>
                 </div>
                 <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="/user/logout">
                     <button class="bg-white text-orange-500 px-2 py-1 rounded-full"><i class="fas fa-sign-out-alt mr-3"></i>Log out</button>
