--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,9 +1,14 @@
+<style>
+  #greetingMess{
+    transition: opacity 0.5s ease-in-out;
+  }
+</style>
 <%-include('../partials/user/header')%>
-  <% if (session){ %>
-    <section class="bg-yellow-100 text-center py-8">
+  <% if (session && session!=='Guest'){ %>
+    <section id="greetingMess" class="bg-yellow-100 text-center py-8">
       <h1 class="text-3xl font-playfair">Welcome <%= session %> !</h1>
     </section>
-    <% } %>
+  <% } %>
       <!-- Carousel -->
       <section class="relative">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -14,21 +19,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/carousel/Halloween candles.avif" class="d-block w-full h-[350px]" alt="...">
+              <img src="/images/carousel/Halloween candles.avif" class="d-block w-full h-[350px]" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/carousel/elephant sculpture.jpg" class="d-block w-full h-[350px]" alt="...">
+              <img src="/images/carousel/elephant sculpture.jpg" class="d-block w-full h-[350px]" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/carousel/wolf printed shirt.webp" class="d-block w-full h-[350px]" alt="...">
+              <img src="/images/carousel/wolf printed shirt.webp" class="d-block w-full h-[350px]" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
@@ -117,7 +122,7 @@
           <% products.forEach((product,index)=>{ %>
             <div class="text-center">
               <img alt="" class="mx-auto rounded-md" height="200" width="200"
-                src="<%= product.image && product.image.length ? 'uploads/product-images/' + product.image[0] : 'images/no_productImage.png' %>"/>
+                src="<%= product.image && product.image.length ? '/uploads/product-images/' + product.image[0] : '/images/no_productImage.png' %>"/>
               <p><%= product.name %></p>
               <p><b>₹</b> <%= product.sellingPrice %></p>
             </div>
@@ -144,3 +149,15 @@
         </div>
       </section>
       <%-include('../partials/user/footer')%>
+
+<script>
+  setTimeout(() => {
+    const messageElement = document.getElementById('greetingMess');
+    if (messageElement) {
+      messageElement.style.opacity = '0';
+      setTimeout(() => {
+        messageElement.style.display = 'none';
+      }, 500); // Adjust the delay to match the transition duration
+    }
+  }, 2800);
+</script>
