--- a/views/partials/admin/side bar.ejs
+++ b/views/partials/admin/side bar.ejs
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li class="mb-4">
-                <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="#">
+                <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="/admin/orders">
                     <i class="fas fa-tags mr-3"></i>
                     Orders
                 </a>
