--- a/views/user/cart/cart.ejs
+++ b/views/user/cart/cart.ejs
@@ -9,7 +9,7 @@
             <% products.forEach((product,index)=>{ %>
             <div id="product-<%= product.productId._id %>" class="border rounded-lg p-4 flex bg-orange-200 shadow-md">
                 <img alt="Product image" class="w-48 h-48 rounded-lg"
-                    src="/uploads/product-images/<%= product.productId.image[0] %>" />
+                    src="/uploads/product-images/<%= product.productId.image[0] %>"/>
                 <div class="flex-1 ml-4">
                     <div class="flex flex-col md:flex-row justify-between items-start md:items-center">
                         <div class="mb-4 w-4/5 md:mb-0">
@@ -36,7 +36,7 @@
             <% }) %>
             <% if(countOfProducts>0){ %>
             <div class="mt-8 flex justify-center">
-                <button class="bg-orange-300 text-black px-8 py-4 rounded-lg text-xl">Check out</button>
+                <a class="bg-orange-300 text-black px-8 py-4 rounded-lg text-xl" href="/user/order/addressPage">Check out</a>
             </div>
             <% } %>
         </div>
