corrected the layout in the user's products page.

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -3,7 +3,7 @@
     <header class="navHeader w-full p-4 flex justify-between items-center text-white">
         <div><img class="w-[120px] h-auto" src="/images/Craftora_logo.png" alt="brand icon"></div>
         <div class="flex items-center space-x-4">
-            <form id="searchForm" class="flex items-center">
+            <form id="searchForm" class="flex items-center space-x-2">
                 <input 
                     name="search" 
                     id="searchInput"
