Corrected the image adding and editing and also added validation to them. Also fixed some bugs.

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -3,7 +3,7 @@
         font-family: 'Inter', sans-serif;
     }
 </style>
-<div class="flex h-screen">
+<div class="flex">
     <!-- Sidebar -->
     <%-include('../partials/admin/side bar')%>
     <!-- Main Content -->
