--- a/views/admin/product folder/product_details.ejs
+++ b/views/admin/product folder/product_details.ejs
@@ -70,11 +70,11 @@
                                 <h3 class="text-lg font-semibold text-gray-700">Pricing</h3>
                                 <div class="mt-4">
                                     <b><h4 class="block text-gray-600">Base Price</h4></b>
-                                    <p class="text-gray-800 mt-2">$<%= productDetails.sellingPrice %></p>
+                                    <p class="text-gray-800 mt-2">₹<%= productDetails.sellingPrice %></p>
                                 </div>
                                 <div class="mt-4">
                                     <b><h4 class="block text-gray-600">Maximum Retail Price</h4></b>
-                                    <p class="text-gray-800 mt-2">$<%= productDetails.mrp %></p>
+                                    <p class="text-gray-800 mt-2">₹<%= productDetails.mrp %></p>
                                 </div>
                                 <div class="mt-4">
                                     <b><h4 class="block text-gray-600">Discount Type</h4></b>
