--- a/views/partials/admin/side bar.ejs
+++ b/views/partials/admin/side bar.ejs
@@ -1,4 +1,9 @@
-<div class="bg-white w-64 h-screen p-4 flex sticky top-0 flex-col">
+<style>
+    #adminSidebar{
+        box-shadow: 8px 0 15px rgba(0, 0, 0, 0.1);
+    }
+</style>
+<div id="adminSidebar" class="bg-white w-64 h-screen p-4 flex sticky top-0 flex-col">
     <div class="flex items-center justify-between mb-6">
         <span class="text-2xl font-bold text-orange-500">
             <img class="w-[120px] h-auto" src="/images/Craftora_logo.png" alt="Brand Logo">
