Implemented the forgot password and it's validation

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -14,7 +14,7 @@
           <input type="password" name="password" id="login_pass-input" class="password-input" oninput="validate_login_pass()" required="">
           <label>Password</label>
           <span id="login_pass_error"></span>
-          <a class="forgotPass_btn">Forgot Password?</a>
+          <a class="forgotPass_btn" href="/user/forgotPassword">Forgot Password?</a>
           <div class="btn btn-transparent toggle-password">Show</div>
         </div>
         <div class="d-flex justify-content-center">
